[gd_scene load_steps=5 format=3 uid="uid://eoduuo6ntfvd"]

[ext_resource type="Script" uid="uid://ckbkqgx5v7o2w" path="res://Menu/main_menu.gd" id="1_sla5p"]
[ext_resource type="Theme" uid="uid://b1oicgscseky1" path="res://Menu/font/menu.tres" id="2_cn2sd"]
[ext_resource type="PackedScene" uid="uid://dw7m0cmcahgt0" path="res://Menu/background/background.tscn" id="3_dtkyu"]
[ext_resource type="Script" path="res://Menu/button.gd" id="3_ohgnh"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sla5p")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -77.0
offset_top = -154.0
offset_right = 77.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_bottom = NodePath("../Button2")
theme = ExtResource("2_cn2sd")
text = "Play"
script = ExtResource("3_ohgnh")

[node name="Timer" type="Timer" parent="Button"]
wait_time = 0.1

[node name="NBPLayerHSlider" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = 196.0
offset_right = 25.0
offset_bottom = 212.0
grow_horizontal = 2
grow_vertical = 2
focus_previous = NodePath("../Button2")
min_value = 2.0
max_value = 4.0
value = 2.0

[node name="PlayerNumberLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -7.0
offset_top = 166.0
offset_right = 12.0
offset_bottom = 189.0
grow_horizontal = 2
grow_vertical = 2
text = "2"

[node name="Title" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 535.0
offset_top = 130.0
offset_right = 612.0
offset_bottom = 162.0
text = "Confitour"

[node name="Button2" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -77.0
offset_top = -356.0
offset_right = 91.0
offset_bottom = -191.0
grow_horizontal = 2
grow_vertical = 0
focus_neighbor_top = NodePath("../Button")
focus_next = NodePath("../NBPLayerHSlider")
theme = ExtResource("2_cn2sd")
text = "Settings"

[node name="Timer_button2" type="Timer" parent="Button2"]
wait_time = 0.1

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -257.5
offset_top = -256.0
offset_right = 257.5
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size_2d_override_stretch = true
render_target_update_mode = 4

[node name="Background" parent="SubViewportContainer/SubViewport" instance=ExtResource("3_dtkyu")]

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="focus_entered" from="Button" to="." method="_on_button_focus_entered"]
[connection signal="focus_exited" from="Button" to="." method="_on_button_focus_exited"]
[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="timeout" from="Button/Timer" to="." method="_on_timer_timeout"]
[connection signal="value_changed" from="NBPLayerHSlider" to="." method="_on_nbp_layer_h_slider_value_changed"]
[connection signal="button_down" from="Button2" to="." method="_on_button_2_button_down"]
[connection signal="focus_entered" from="Button2" to="." method="_on_button_2_focus_entered"]
[connection signal="focus_exited" from="Button2" to="." method="_on_button_2_focus_exited"]
[connection signal="mouse_entered" from="Button2" to="." method="_on_button_2_mouse_entered"]
[connection signal="timeout" from="Button2/Timer_button2" to="." method="_on_timer_button_2_timeout"]
